Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2915

SEGV occurs when POST request was posted without Expect: 100-continue header

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.0.0
    • 5.1.0
    • HTTP

    Description

      The patch merged on TS-1125 has a bug that occurs Segmentation fault.
      It's reproduced when send_100_continue_response option was enabled and POST request was posted without Expect: 100-continue header.

      Please check follow links.
      https://github.com/apache/trafficserver/blob/master/proxy/http/HttpSM.cc#L1898
      https://github.com/apache/trafficserver/blob/master/proxy/http/HttpSM.cc#L3290

      Attachments

        1. bugfix.diff
          0.6 kB
          Ryo Okubo

        Issue Links

          Activity

            People

              bcall Bryan Call
              rokubo Ryo Okubo
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: