TS-2915: SEGV occurs when POST request was posted without Expect: 100-continue header